# SEM7_Software_Design

./: .gitignore  LICENSE
L1/: .nvimrc  CMakeLists.txt  build.sh
L1/docs/: generalPreamble.sty  records.md  report.tex
L1/docs/drawio/: classes_uml.drawio  container_classes_uml.drawio
L1/docs/report/: longReportFormat.sty  report.tex
L1/docs/styles/: generalPreamble.sty  longReportFormat.sty  sourceCode.sty
L1/src/: demo.cpp  demo2.cpp  demo3.cpp  test.cpp
L1/src/cli/: myCli.cpp  myCli.h
L1/src/container/: hashMap.cpp  hashMap.h
L1/src/exceptions/: exception.h
L1/src/figures/: atanSegment.cpp  atanSegment.h  pentagram.cpp  pentagram.h  pentagramText.cpp  pentagramText.h  point.cpp  point.h  point.hpp  shape.cpp  shape.h  shape.hpp  text.cpp  text.h
L2/: L2.pro  adddialog.cpp  adddialog.ui  exception.h  graphwidget.cpp  graphwidget.h  hashMap.h  icons.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  point.h
L2/docs/: bibliography.bib  example.json  report.tex
L2/docs/styles/: generalPreamble.sty  longReportFormat.sty  sourceCode.sty
L2/figures/: atansegment.cpp  atansegment.h  pentagram.cpp  pentagram.h  pentagramtext.cpp  pentagramtext.h  shape.cpp  shape.h  text.cpp  text.h
L2/src/: adddialog.cpp  adddialog.h  graphwidget.cpp  graphwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  point.cpp
L2/src/figures/: atansegment.cpp  pentagram.cpp  pentagram.h  shape.cpp  shape.h  text.cpp  text.h
L3/: bibliography.bib  report.tex
L3/styles/: gostBibTex.sty  longReportFormat.sty
